# bevy_blender

./: .gitignore  Cargo.toml  README.md
examples/default_materials/: main.rs
src/: lib.rs  material.rs  mesh.rs  object.rs
