[package]
name = "bevy_blender"
authors = ["Jerald Thomas <jeraldamo@gmail.com>"]
version = "0.2.0"
edition = "2021"
description = "bevy_blender is a Bevy library that allows you to use assets created in Blender directly from the .blend file"
readme = "README.md"
repository = "https://github.com/jeraldamo/bevy_blender"
license = "MIT"
keywords = ["gamedev", "bevy", "blender"]
categories = ["game-development"]


[dependencies]
anyhow = "~1.0"
bevy = "~0.8"
blend = "~0.6"
thiserror = "~1.0"

[dev-dependencies]

[features]
default = []
